package Services;

public enum Tasks {
    CLEANNING,
    ORDERING,
    POLISHING
}
