package Services;

public enum Waste {
    MUD, DUST
}
